objects/ASI_GiftBox_Notification_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>ASI_GiftBox_Finance_User_ID__c</fullName>
        <formula>Notification_Id__r.Finance_User__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Finance User ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_GiftBox_Sales_Manager_ID__c</fullName>
        <formula>Notification_Id__r.ASI_GiftBox_Sales_Manager__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Manager ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_GiftBox_Sales_Representative__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Representative</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Gift_Box_Notification_Mappings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_GiftBox_User_Role_Name__c</fullName>
        <label>User Role Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notification_Id__c</fullName>
        <label>Gift Box Notification User</label>
        <referenceTo>ASI_GiftBox_Notification_User__c</referenceTo>
        <relationshipLabel>Gift Box Notification Mappings</relationshipLabel>
        <relationshipName>Gift_Box_Notification_Mappings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Gift Box Notification Mapping</label>
    <nameField>
        <displayFormat>GBNM-{00000}</displayFormat>
        <label>Mapping Ref Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Gift Box Notification Mappings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>